{
    "name": "MouseControls",
    "maps": [
        {
            "name": "UseMouse",
            "id": "a018f904-6b96-47ba-80f6-bd8a81f793d8",
            "actions": [
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "90e280d1-7d4a-4aad-8bfa-7410ca182a85",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dc9aab1b-910b-4a2d-b694-60032fb2e8bc",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}